[package]
name = "moonshine-object"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Bevy Entities are nice. Objects are better!"
categories = ["game-development"]
keywords = ["bevy", "ecs", "object", "entity"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_object"
repository = "https://github.com/Zeenobit/moonshine_object"

[dependencies]
bevy_ecs = "0.16.*"
moonshine-kind = { version = "0.2.2", path = "../kind" }
moonshine-util = { version = "0.3.1", path = "../util" }

[dev-dependencies]
bevy = "0.16.*"
