[package]
name = "moonshine-object"
version = "0.2.6"
edition = "2021"
license = "MIT"
description = "Bevy Entities are nice. Objects are better!"
categories = ["game-development"]
keywords = ["bevy", "ecs", "object", "entity"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_object"
repository = "https://github.com/Zeenobit/moonshine_object"

[dependencies]
bevy_ecs = "0.17"
moonshine-kind = { version = "0.4" }
moonshine-util = { version = "0.4" }
moonshine-tag = { version = "0.4" }

[dev-dependencies]
bevy = "0.17"
